# otel-php-rust

./: .gitignore  Dockerfile  Dockerfile-7.3  Dockerfile-7.4  Dockerfile.alpine  Makefile  README.md  composer.json  docker-compose.yaml
otel/: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  build.rs  config.m4  globals.php
otel/modules/: .gitignore
otel/src/: class_registry.rs  error.rs  execute.rs  globals.rs  instrumentation.rs  lib.rs  logging.rs  module.rs  observer.rs  request.rs  runtime.rs  tracer.rs  tracer_provider.rs  util.rs
otel/src/auto/: execute.rs  execute_data.rs  mod.rs  observer.rs  plugin.rs  plugin_manager.rs  sql_utils.rs  utils.rs
otel/src/auto/plugin/: hook.rs  laminas.rs  psr18.rs  test.rs  zf1.rs
otel/src/auto/plugins/: laminas.rs  mod.rs  psr18.rs  test.rs  zf1.rs
otel/src/config/: ini.rs  mod.rs  trace_attributes.rs
otel/src/context/: context.rs  context_interface.rs  context_storage_interface.rs  mod.rs  scope.rs  scope_interface.rs  storage.rs
otel/src/context/propagation/: mod.rs  text_map_propagator_interface.rs
otel/src/logs/: log_record.rs  logger.rs  logger_interface.rs  logger_provider.rs  logger_provider_interface.rs  memory_exporter.rs  mod.rs
otel/src/trace/: current_span.rs  local_root_span.rs  memory_exporter.rs  mod.rs  non_recording_span.rs  plugin.rs  plugin_manager.rs  scope.rs  span.rs  span_builder.rs  span_context.rs  span_interface.rs  status_code.rs  tracer.rs  tracer_interface.rs  tracer_provider.rs  tracer_provider_interface.rs
otel/src/trace/plugins/: psr18.rs  roadrunner.rs  test.rs
otel/src/trace/propagation/: mod.rs  trace_context_propagator.rs
otel/tests/: run-server.php
otel/tests/auto/: auto-and-manual.phpt  auto-demo.diff  auto-demo.out  auto-demo.php  auto-demo.phpt  auto-demo.sh  autoinstrument-class-when-disabled.phpt  autoinstrument-class.phpt  autoinstrument-eval.phpt  autoinstrument-function-twice.phpt  autoinstrument-function.phpt  autoinstrument-interface.phpt  autoinstrument-internal.phpt  autoinstrument-mutate-return-value.phpt  autoinstrument-testclass.phpt
otel/tests/auto/instrumentatation/: 003.phpt  (+62 more)
otel/tests/http/: http-error.phpt  http-fatal.phpt  http-post.phpt  http_spans.phpt  ignore-url.phpt  manually-end-auto-root-span.phpt  modify-local-root-span.phpt  remote-parent.phpt  run-server.php  server-create-manual-span.php  server-end-root-span.php  server-error.php  server-get.php  server-modify-local-root-span.php  server-post.php  server-remote-parent.php  zf1-db.phpt
otel/tests/otlp/: export_log_grpc.phpt  export_log_http_protobuf.phpt  export_span.phpt  export_span_grpc.phpt  export_span_http_protobuf.phpt
otel/tests/phpt/: 001.phpt  cli-disable.phpt  cli-enabled.phpt  die.phpt  error-logging.phpt  execute_ex.phpt  globals.phpt  logging-debug.phpt  logging-default.phpt  logging-errors.phpt  memory-exporter.phpt  none-exporter.phpt  phpinfo.phpt  server-vars.phpt
(+141 files in other folders)
