[package]
name = "otel"
version = "0.2.0"
edition = "2021"
publish = false

[features]
test = []

[lib]
name = "otel"
crate-type = ["cdylib"]

[dependencies]
phper = "0.16.0"
#phper = { git = "https://github.com/phper-framework/phper.git", rev = "ba3e1d4" }
opentelemetry = { version = "0.28.0", features = ["internal-logs"] }
opentelemetry-http = "0.28.0"
opentelemetry-stdout = "0.28.0"
opentelemetry_sdk = "0.28.0"
opentelemetry-otlp = { version = "0.28.0" , features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = "0.28.0"
tokio = { version = "1.0", features = ["full"] }
once_cell = "1.20.3"
anyhow = "1.0.95"
chrono = "0.4.39"
lazy_static = "1.5.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[build-dependencies]
cargo_metadata = "0.19.2"

[dev-dependencies]
phper-test = "0.15.0"
