[package]
name = "otel"
version = "0.8.0"
edition = "2021"
publish = false
build = "build.rs"

[features]
test = []
without-laminas = []
without-psr18 = []

[lib]
name = "otel"
crate-type = ["cdylib"]

[dependencies]
phper = "0.17.0"
#phper = { git = "https://github.com/phper-framework/phper.git", rev = "ba3e1d4" }
opentelemetry = { version = "0.30.0", features = ["internal-logs"] }
opentelemetry-http = "0.30.0"
opentelemetry-stdout = "0.30.0"
opentelemetry_sdk = { version = "0.30.0", features = ["testing"] }
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = "0.30.0"
tokio = { version = "1.0", features = ["full"] }
once_cell = "1.20.3"
anyhow = "1.0.95"
chrono = "0.4.39"
lazy_static = "1.5.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
dashmap = "6.1.0"
dotenvy = "0.15.7"
hostname = "0.4.1"

[build-dependencies]
cargo_metadata = "0.19.2"
phper-sys = "0.15.3"

[dev-dependencies]
phper-test = "0.16.0"
