[package]
name = "otel"
version = "0.14.0"
edition = "2024"
publish = false
build = "build.rs"

[features]
test = []

[lib]
name = "otel"
crate-type = ["cdylib"]

[profile.release]
strip = "debuginfo"

[dependencies]
#phper = "0.17.0"
phper = { git = "https://github.com/brettmc/phper.git", branch = "execute_data_retval" }
opentelemetry = { version = "0.30.0", features = ["internal-logs"] }
opentelemetry-http = "0.30.0"
opentelemetry-stdout = "0.30.0"
opentelemetry_sdk = { version = "0.30.0", features = ["testing"] }
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = "0.30.0"
tokio = { version = "1.0", features = ["full"] }
once_cell = "1.20.3"
anyhow = "1.0.95"
chrono = "0.4.39"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
dotenvy = "0.15.7"
hostname = "0.4.1"
lazy_static = "1.5.0"
regex = "1.11.1"

[build-dependencies]
cargo_metadata = "0.22.0"
phper-sys = "0.15.3"

[dev-dependencies]
phper-test = "0.16.0"
